# drf_selfedu

./: README.md  pyproject.toml
app/app/: settings.py  urls.py
app/book/: admin.py  models.py  permisions.py  serializers.py  urls.py  views.py
app/book/migrations/: 0001_initial.py  0002_book_user.py
