[tool.poetry]
name = "drf-selfedu"
version = "0.1.0"
description = ""
authors = ["Doppelgangers <6666genocide666@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
